ullTime: period overview: fix alignment of times, show negative time currect, add tests

--- a/plugins/ullCoreThemeNGPlugin/web/css/main.css
+++ b/plugins/ullCoreThemeNGPlugin/web/css/main.css
@@ -846,6 +846,21 @@ img.ull_user_popup_icon {
 
 /*
  * ************************************************
+ *  ullWidgetTime
+ * ************************************************
+ */
+ 
+.ull_widget_time {
+	/*width: 4em;*/
+	text-align: right;
+} 
+ 
+.ull_widget_time_negative {
+	color: #ff0000;
+} 
+ 
+/*
+ * ************************************************
  *  Printout settings
  * ************************************************
  */
